fix img overlapping container issue

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,11 @@ h1, h2, h3, h4, h5, h6, .lead, a, footer {
   font-family: 'Oswald', sans-serif;
 }
 
-p, .quote {
+p {
   font-family: 'Playfair Display', serif;
+}
+
+.quote {
+  font-family: 'Playfair Display', serif;
+  font-size: 20px;
 }
